--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tsconfig/node20": "^20.1.2",
     "@types/node": "^20.10.6",
     "dotenv": "^16.3.1",
+    "nodemon": "^3.0.2",
     "prettier": "^3.1.1",
     "rimraf": "^5.0.5",
     "ts-node": "^11.0.0-beta.1",
