--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
     "vitest": "^1.1.3"
+  },
+  "devDependencies": {
+    "@types/async": "^3.2.24"
   }
 }
